[project]
name = "mqtt-udp"
version = "0.0.1"
description = "Tiny, modern MQTT/UDP client."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.11"
authors = [{ name = "Lemonyte", email = "contact@lemonyte.com" }]
keywords = [
    "mqtt",
    "udp",
    "client",
    "networking",
    "iot",
    "embedded",
    "protocol",
    "communication",
    "messaging",
    "pub/sub",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/lemonyte/mqtt-udp"

[dependency-groups]
dev = [
    "paho-mqtt~=2.1.0",
    "prek~=0.3.8",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"examples/**" = ["D", "T", "DTZ", "S311", "INP001", "C901"]
